# json_compare

./: .gitignore  CLAUDE.md  README.md  TEST_REPORT_COMPREHENSIVE.md  WEB_UI_README.md  debug_embedding.py  debug_webui_state.py  init.sh  inspect_webui.py  pyproject.toml  requirements.txt  simple_webui_test.py  test_api_direct.py  test_case_1.py  test_case_2.py  test_case_3_4.py  test_data1.jsonl  test_data2.jsonl  test_report_20250920_051835.json  test_report_20250920_052258.json  test_webui_cases.py  webui_test_playwright.py
datas/: classification.infer.jsonl  classification.infer.mareged.jsonl  single_file_test.jsonl  test_multiline.jsonl  test_multiline2.jsonl
docs/: envs.md  implementation_plan.md  rules.md  setup.md  spec.md
prompts/: 06ab7d6a-73cb-4e46-9cff-8d04c9fa2c18.yaml  default_similarity.yaml  semantic_similarity.yaml  strict_similarity.yaml
src/: __init__.py  __main__.py  api.py  api_response_validation_engine.py  caching_resource_manager.py  comparison_result_validator.py  config_management.py  console_network_monitor.py  debug_information_collector.py  download_and_error_manager.py  drag_drop_manager.py  dual_file_comprehensive_verifier.py  dual_file_extractor.py  dual_file_test_management_framework.py  embedding.py  enhanced_cli.py  enhanced_result_format.py  error_handler.py  error_handling_comprehensive_verifier.py  file_upload_manager.py  form_interaction_manager.py  jsonl_formatter.py  llm_client.py  llm_configuration_manager.py  llm_metrics.py  llm_similarity.py  logger.py  mcp_wrapper.py  network_monitor_enhancement.py  page_navigator.py  (+12 more)
(+107 files in other folders)
